fix: github image in light mode not visible

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -74,6 +74,9 @@
   filter:invert(1);
 }
 
+[data-theme='light'] .header-github-link {
+  filter:invert(1);
+}
 
 
 
